[gd_scene format=3 uid="uid://c7vpfpgd7v5u5"]

[ext_resource type="Script" uid="uid://coh4t3jm3qwh5" path="res://inspector/properties/arrows.gd" id="1_76kay"]
[ext_resource type="LabelSettings" uid="uid://cosdrrt3ct7mw" path="res://assets/font/single.tres" id="2_uxwe0"]
[ext_resource type="Texture2D" uid="uid://bus0ip84oiiey" path="res://inspector/ui/arrow/left_arrow_disabled.png" id="3_j7euj"]
[ext_resource type="Theme" uid="uid://4bven1lkpiqj" path="res://inspector/inspector.tres" id="3_ucacb"]
[ext_resource type="Texture2D" uid="uid://b8qfhv5lcq1vi" path="res://inspector/ui/arrow/left_arrow.png" id="4_j7euj"]
[ext_resource type="Texture2D" uid="uid://b5qp534wklh7j" path="res://inspector/ui/arrow/right_arrow_disabled.png" id="5_3kwcj"]
[ext_resource type="Texture2D" uid="uid://bkvddo1v6laq1" path="res://inspector/ui/arrow/right_arrow.png" id="6_s12xy"]

[node name="arrows" type="Control" unique_id=1089333438 node_paths=PackedStringArray("line_edit_node", "left_button", "left_texture_rect", "right_button", "right_texture_rect", "name_node")]
custom_minimum_size = Vector2(92, 6)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_76kay")
line_edit_node = NodePath("ColorRect/LineEdit")
left_button = NodePath("ColorRect/left")
left_texture_rect = NodePath("ColorRect/left/TextureRect")
right_button = NodePath("ColorRect/right")
right_texture_rect = NodePath("ColorRect/right/TextureRect2")
name_node = NodePath("name")
left_texture_enabled = ExtResource("4_j7euj")
left_texture_disabled = ExtResource("3_j7euj")
right_texture_enabled = ExtResource("6_s12xy")
right_texture_disabled = ExtResource("5_3kwcj")

[node name="name" type="Label" parent="." unique_id=854757395]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 32.0
grow_vertical = 2
text = "property"
label_settings = ExtResource("2_uxwe0")
vertical_alignment = 1

[node name="ColorRect" type="Control" parent="." unique_id=146594777]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_right = -5.0
grow_horizontal = 0
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="ColorRect" unique_id=1025844914]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ucacb")
text = "134"
alignment = 1
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false
caret_blink = true
caret_blink_interval = 0.4

[node name="left" type="Button" parent="ColorRect" unique_id=1455127898]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -3.0
offset_bottom = 3.0
grow_vertical = 2
theme = ExtResource("3_ucacb")

[node name="TextureRect" type="TextureRect" parent="ColorRect/left" unique_id=1792843036]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -3.0
offset_right = 2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_j7euj")

[node name="right" type="Button" parent="ColorRect" unique_id=630363217]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -3.0
offset_right = 6.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("3_ucacb")

[node name="TextureRect2" type="TextureRect" parent="ColorRect/right" unique_id=595634242]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -3.0
offset_right = 2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_s12xy")

[connection signal="focus_exited" from="ColorRect/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_changed" from="ColorRect/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="ColorRect/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="ColorRect/left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="ColorRect/right" to="." method="_on_right_pressed"]
